# Qna-ChatBot

./: .env  README.md  pyproject.toml  requirements.txt
app/: application.py  sidebar.py
config/: config.ini  config.py
src/: main.py  model.py
